css/view.css
:root {
  --logo-size: 70px;
  --title-size: calc(0.9em * (24.06 / 16));
  --grey: #8f8f9d;
  --dark-grey: #5E5E5E;
}

body {
  font-family: "Fira Code", monospace;
  padding: 2em;
}

header {
  display: grid;
  grid-template-columns: var(--logo-size) 1fr var(--logo-size);
  align-items: center;
  margin-bottom: 4em;
}

#intro {
  position: relative;
}

#logo > img {
  width: var(--logo-size);
  height: var(--logo-size);
}

#title {
  --title-hgap: calc(var(--title-size) * (6.02 / 24.06));
  --title-vgap: calc(var(--title-size) * (9.02 / 24.06));
  font-size: var(--title-size);
  display: flex;
  gap: var(--title-hgap);
  align-items: baseline;
  justify-self: center;
}

#title > span {
  padding: var(--title-hgap) var(--title-vgap); /* naming is weird, but this is correct */
  color: white;
  background: black;
  border-radius: var(--title-hgap);
}

main {
  padding: 0px 15vw;
  display: grid;
  max-width: 730px;
  margin: auto;
}

section > h1 {
  margin: 0px 0px 1rem 0px;
}

hr {
  border: none;
  border-top: 2px dashed var(--grey);
  margin: 3rem 0px;
}

ul {
  list-style: none;
  padding: 0px;
  margin: 0px;
}

li {
  display: flex;
  align-items: start;
  gap: 0.6em;
}

ul input {
  flex-shrink: 0;
  margin-left: 2px;
  margin-right: 0px;
  appearance: none;
  border: 2px solid var(--grey);
  --size: 1rem;
  width: var(--size);
  height: var(--size);
  border-radius: 2px;
  position: relative;
  order: 1;
}

label {
  order: 2;
}

ul input[type="checkbox"]::before { /* wont work without [type="checkbox"] cuz ::before doesn't work on just input */
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background: url("/svg/tick.svg");
}

label:hover + input {
  border-color: var(--dark-grey);
}

ul input:checked {
  background: black;
  border-color: black;
}

#button-group {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 1em;
}

#related a {
  background: black;
  color: white;
  padding: 0.7em;
  text-decoration: none;
  text-align: center;
  border-radius: 6px;
  position: relative;
  transition: all 0.2s ease-in;
}

#related a::before {
  content: "";
  position: absolute;
  bottom: 0;
  left: 50%;
  --size: 6px;
  width: var(--size);
  height: var(--size);
  transform: translate(-50%, 0.7em);
  background: black;
  border-radius: 100%;
  opacity: 0;
  transition: all 0.15s ease-in;
}

#related a:hover::before {
  opacity: 1;
}

#related a:hover {
  border-radius: 4px;
}

#progress {
  --size: 1.25em;
  display: flex;
  gap: 0.6em;
  height: var(--size);
}

#progress svg circle {
  stroke: var(--grey);
  stroke-width: 2px;
  fill: transparent;
}

#progress svg {
  width: var(--size);
  height: var(--size);
}

#progress #progress-value {
  height: 100%;
  background: black;
  display: grid;
  place-items: center;
  padding: 0px 0.5em;
  color: white;
  font-size: 0.8em;
  border-radius: 4px;
}

footer {
	margin: 7rem 0px 0px;
	color: var(--grey);
	display: flex;
	place-content: center;
}

footer p {
	border-bottom: 1px dashed currentColor;
}

@media (min-width: 750px) {
  section > h1 {
    margin-bottom: 0.75rem;
  }

  #intro p {
    margin-top: 0px;
  }

  #intro {
    margin-bottom: 1em;
  }

  #progress {
    --size: 1.55rem;
    gap: 1.3rem;
    height: initial;
    position: absolute;
    top: 0;
    flex-direction: column;
    transform: translateX(-200%) translateY(4px);
    align-items: center;
  }

  #progress #progress-value {
    max-width: calc(var(--size) - 2px);
    word-break: break-all;
    box-sizing: border-box;
    overflow-wrap: anywhere;
    line-height: 16px;
    text-align: center;
    padding: 0.5em 0.3em;
    transform: translateY(-3px);
  }
}

@media (max-width: 749px) {
  #intro {
    margin-bottom: 0.5rem;
  }
  #intro p {
    margin-bottom: 2em;
  }
}

@media (max-width: 890px) {
  #button-group {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (max-width: 690px) {
  main {
    padding: 0px;
  }
}

@media (max-width: 560px) {
  :root {
    --logo-size: 90px;
  }
  #button-group {
    grid-template-columns: repeat(2, 1fr);
  }

  ul li {
    margin-bottom: 0.5em;
    font-size: 1.1em;
  }

  ul input {
    border-width: 3px;
  }

  header {
    display: grid;
    grid-template-columns: none;
    justify-items: center;
    margin-bottom: 3em;
    gap: 2rem;
  }
}

